# airflow-jalali-cron

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/airflow_jalali_cron/: __init__.py  plugin.py  timetable.py
